sumo/tests/duarouter/alternatives/style1_input/errors/testsuite.duarouter
# Errors in route
route

# Errors in routealt
routealt

# Errors in vehicle
vehicle



# Wrong XML
xml
